tests/failing/invalid_literal.dodo
// Expected: Did not expect token 'Else' while parsing prefix expression

fn main() {
    let x: u32 = else;
}
